--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="IpcimWpf" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="13*"/>
+            <ColumnDefinition Width="27*"/>
+        </Grid.ColumnDefinitions>
 
     </Grid>
 </Window>
