--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -14,6 +14,7 @@
         <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}"/>
         <StackPanel Grid.Column="1">
             <Label Content="Label"/>
+            <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
         </StackPanel>
 
     </Grid>
