--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -17,6 +17,7 @@
             <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
             <Label  Content="Label"  />
             <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
+            <Button Content="Button"/>
 
         </StackPanel>
         
