--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -1,29 +1,26 @@
-﻿ ﻿<Window x:Class="IpcimWPF.MainWindow"
+﻿<Window x:Class="IpcimWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="IpcimWPF" Height="450" Width="800">
-
-    <Grid Margin="10">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:IpcimWPF"
+        mc:Ignorable="d"
+        Title="IpcimWpf" Height="450" Width="800">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-
-        <!-- BAL OLDAL: DataGrid -->
-        <DataGrid x:Name="dgData" Grid.Column="0" AutoGenerateColumns="True" Margin="0,0,10,0"/>
-
-        <!-- JOBB OLDAL: bevitel + mentés -->
+        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}"/>
         <StackPanel Grid.Column="1">
-
-            <TextBlock Text="Domain-name:"/>
-            <TextBox x:Name="tbDomain" Margin="0 0 0 10"/>
-
-            <TextBlock Text="IP cím:"/>
-            <TextBox x:Name="tbIp" Margin="0 0 0 20"/>
-
-            <Button Content="Bevitel" Click="btnBevitel_Click" Margin="0 0 0 10"/>
-            <Button Content="Mentés" Click="btnMentes_Click"/>
+            <Label Content="Label"/>
+            <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
+            <Label  Content="Label"  />
+            <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
+            <Button Content="Button"/>
+            <Button Content="Button"/>
 
         </StackPanel>
+        
     </Grid>
 </Window>
