--- a/IpcimWPF/MainWindow.xaml
+++ b/IpcimWPF/MainWindow.xaml
@@ -1,26 +1,29 @@
 ﻿<Window x:Class="IpcimWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IpcimWPF"
-        mc:Ignorable="d"
-        Title="IpcimWpf" Height="450" Width="800">
-    <Grid>
+        Title="IpcimWPF" Height="450" Width="800">
+
+    <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}"/>
+
+        <!-- BAL OLDAL: DataGrid -->
+        <DataGrid x:Name="dgData" Grid.Column="0" AutoGenerateColumns="True" Margin="0,0,10,0"/>
+
+        <!-- JOBB OLDAL: bevitel + mentés -->
         <StackPanel Grid.Column="1">
-            <Label Content="Label"/>
-            <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
-            <Label  Content="Label"  />
-            <TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
-            <Button Content="Button"/>
-            <Button Content="Button"/>
+
+            <TextBlock Text="Domain-name:"/>
+            <TextBox x:Name="tbDomain" Margin="0 0 0 10"/>
+
+            <TextBlock Text="IP cím:"/>
+            <TextBox x:Name="tbIp" Margin="0 0 0 20"/>
+
+            <Button Content="Bevitel" Click="btnBevitel_Click" Margin="0 0 0 10"/>
+            <Button Content="Mentés" Click="btnMentes_Click"/>
 
         </StackPanel>
-        
     </Grid>
 </Window>
